--- a/templates/protein.html
+++ b/templates/protein.html
@@ -11,7 +11,7 @@ Protein
   </div>
   <br>
   <div class="container" style="text-align: justify;">
-    <h6><i>Here a protein is broken into all the possible overlapping peptides according to the length defined by the user. This will help to identify the peptide sequence that might have IL-13 induction ability.<br> For more help please visit <a style="text-decoration: none;" href="{{request.script_root}}/help">Help</a>
+    <h6><i>The input protein sequence is broken into all the possible overlapping peptides according to the length defined by the user. This will help to identify the peptide sequence that might have IL-13 induction ability.<br> For more help please visit <a style="text-decoration: none;" href="{{request.script_root}}/help">Help</a>
     </i></h6>
   </div>
   <br />
@@ -35,7 +35,7 @@ Protein
     <hr>
     <div class="slidecontainer">
       <label for="myRange"><strong>Select the value for peptide fragment length:</strong></label><br>
-      <input type="range" min="8" max="25" value="15" name="slider_value" class="slider" id="myRange">
+      <input type="range" min="8" max="35" value="15" name="slider_value" class="slider" id="myRange">
       <p>Value: <span id="slider_value"></span></p>
     </div>
     <hr>
